Add filter to sort all types product

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             <ul class="nav-links">
                 <li><a class="men link" href="#">Men</a>
                     <ul class="men-category">
-                        <li class="li-link"><a href="">Cap</a></li>
-                        <li class="li-link"><a href="">T-Shirt</a></li>
-                        <li class="li-link"><a href="">Pants</a></li>
-                        <li class="li-link"><a href="">Shorts</a></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="all">All</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="cap">Cap</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="tshirt">T-Shirt</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="pants">Pants</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="short">Short</button></li>
                     </ul>
                 </li>
                 <li><a class="women link" href="#">Women</a>
@@ -51,11 +52,7 @@
             </div>
         </div>
     </header>
-    <div>
-        <button class="btn-shein">Sweater</button>
-        <button class="btn-nike">nike</button>
-        <button class="btn-all">All</button>
-    </div>
+
     <main id="main-container">
         <div class="products">
             <!-- <ul class="product">
@@ -127,7 +124,8 @@
     <footer class="footer">
         <h1 class="text-transparent">All rights reserved @2022</h1>
     </footer>
-    <script src="vanilla.js"></script>
+    <script src="data.js"></script>
     <script src="apps.js"></script>
+    <script src="vanilla.js"></script>
 </body>
 </html>
