Add some photos and data

--- a/index.html
+++ b/index.html
@@ -12,47 +12,47 @@
 <body>
     <header>
         <div class="nav-container">
-
-            <h1 class="logo">Brand</h1>
-            <ul class="social-links">
-                <li><a class="" href="">@</a></li>
-                <li><a class="" href="/html/signin.html">Sign In</a></li>
-            </ul>
+           <img class="logo" src="/banner/logo.png" alt="">
   
             <ul class="nav-links">
-                <li><a class="men link" href="#">Men</a>
+                <li><button class="men link">Men</button>
                     <ul class="men-category">
                         <li class="li-link"><button class="btn" type="button" data-id="all">All</button></li>
                         <li class="li-link"><button class="btn" type="button" data-id="cap">Cap</button></li>
                         <li class="li-link"><button class="btn" type="button" data-id="tshirt">T-Shirt</button></li>
                         <li class="li-link"><button class="btn" type="button" data-id="pants">Pants</button></li>
                         <li class="li-link"><button class="btn" type="button" data-id="short">Short</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="sweater">Sweater</button></li>
                     </ul>
                 </li>
-                <li><a class="women link" href="#">Women</a>
+                <li><button class="women link">Women</button>
                     <ul class="women-category">
-                        <li class="li-link"><a href="">Cap</a></li>
-                        <li class="li-link"><a href="">T-Shirt</a></li>
-                        <li class="li-link"><a href="">Pants</a></li>
-                        <li class="li-link"><a href="">Shorts</a></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="all">All</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="cap">Cap</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="tshirt">T-Shirt</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="pants">Pants</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="short">Short</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="sweater">Sweater</button></li>
                     </ul>
                 </li>
-                <li><a class="kids link" href="#">Kids</a>
+                <li><button class="kids link">Kids</button>
                     <ul class="kids-category">
-                        <li class="li-link"><a href="">Cap</a></li>
-                        <li class="li-link"><a href="">T-Shirt</a></li>
-                        <li class="li-link"><a href="">Pants</a></li>
-                        <li class="li-link"><a href="">Shorts</a></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="all">All</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="cap">Cap</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="tshirt">T-Shirt</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="pants">Pants</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="short">Short</button></li>
+                        <li class="li-link"><button class="btn" type="button" data-id="sweater">Sweater</button></li>
                     </ul>
                 </li>
             </ul>
-            <div class="input-btn-seaarch">
-                <input class="input-search" type="text" placeholder="Search">
-                <button class="btn-search">Search</button>
-            </div>
         </div>
     </header>
-
+    <article>
+        <div class="">
+            <img src="/banner/5092428.jpg" alt="">
+        </div>
+    </article>
     <main id="main-container">
         <div class="products">
             <!-- <ul class="product">
