--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             </ul>
         </div>
     </header>
-    <article>
+    <article class="body">
         <div class="">
-            <img src="/banner/5092428.jpg" alt="">
+            <img src="banner/5092428.jpg" alt="">
         </div>
     </article>
     <main id="main-container">
-        <div class="products">
+        <div class="products" >
             <!-- <ul class="product">
                 <li>
                     <a href=""><img class="product-image" src="/image/product1.jpg" alt=""></a>
