--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="variable.css">
-    <title>E-Commerce</title>
+    <title>Clothing</title>
 </head>
 <body>
     <header>
