Adding a button element to index.html and popup when product is hover

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="variable.css">
+
+    
     <title>Clothing</title>
 </head>
+
 <body>
     <header>
         <div class="nav-container">
@@ -48,84 +51,21 @@
             </ul>
         </div>
     </header>
-    <article class="body">
-        <div class="">
+    <article>
+        <div class="sale-container">
             <img src="banner/5092428.jpg" alt="">
         </div>
     </article>
     <main id="main-container">
         <div class="products" >
-            <!-- <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product1.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul>
-            <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product2.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul>
-            <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product3.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul>
-            <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product4.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul>
-            <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product5.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul>
-            <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product6.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul>
-            <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product7.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul>
-            <ul class="product">
-                <li>
-                    <a href=""><img class="product-image" src="/image/product8.jpg" alt=""></a>
-                    <h4 class="product-name">Korean Sweater</h4>
-                    <h4 class="product-brand">Shein</h4>
-                    <h4 class="product-price">$40</h4>
-                </li>
-            </ul> -->
+        
         </div>
     </main> 
     <footer class="footer">
         <h1 class="text-transparent">All rights reserved @2022</h1>
     </footer>
-    <script src="data.js"></script>
     <script src="apps.js"></script>
+    <script src="data.js"></script>
     <script src="vanilla.js"></script>
 </body>
 </html>
