Debugging to display the logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="nav-container">
             <!-- logo -->
-           <img class="logo" src="/banner/logo.png" alt="">
+           <img class="logo" src="banner/logo.png" alt="">
             
            <!-- Category -->
             <ul class="nav-links">
@@ -54,7 +54,7 @@
             </ul>
             <!-- Cart -->
             <div class="cart-btn-container">
-                <button class="cart-btn">X</button>
+                <button class="cart-btn">X<span>0</span></button>
             </div>
             <div class="cart-container remove-category">
                 <div>
