Add function to clear cart and all so save cart product to local storage

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </ul>
             <!-- Cart -->
             <div class="cart-btn-container">
-                <button class="cart-btn">X<span>0</span></button>
+                <button class="cart-btn">X<span class="item-quantity">0</span></button>
             </div>
             <div class="cart-container remove-category">
                 <div>
@@ -64,8 +64,8 @@
                     <hr>
                     <!-- Single Cart Item -->
                     <div class="cart-single-item">
-                        <!-- <div class="cart-item-container"> -->
-                            <!-- <img class="cart-image" src="./cap/cap1.jpg" alt="">
+                        <!-- <div class="cart-item-container">
+                            <img class="cart-image" src="./cap/cap1.jpg" alt="">
                             <div class="cart-item-detail-container">
                                 <div class="cart-item-name-price-btn">
                                     <h4 class="cart-product-name">Korean Sweater</h4>
@@ -79,8 +79,8 @@
                                     <h4 class="quantity">0</h4>
                                     <button class="decrease">-</button>
                                 </div>
-                            </div> -->
-                        <!-- </div> -->
+                            </div>
+                        </div> -->
                     </div>
                     <!-- End Cart Item -->
                     
@@ -89,8 +89,8 @@
                 </div>
                 <!-- Cart Footer -->
                 <div class="cart-footer"><hr>
-                    <div class="total-container">Total:<h4 class="total">0</h4></div>
-                    <button class="cart-btn-clear-item" type="button">Clear</button>
+                    <div class="total-container">Total:<h4 class="cart-total">0</h4></div>
+                    <button class="clear-cart-btn" type="button">Clear</button>
                 </div>
                 <!-- End Cart Footer -->
             </div>
@@ -113,7 +113,15 @@
     <main class="remove-category" id="main-container">
         <div class="products" >
             <!-- Single Product -->
-            
+            <!-- <ul class="product">
+                <li>
+                    <button class="btn-add-to-cart" data-id="1">ADD TO CART</button>
+                    <a class="image-anchor" href=""><img class="product-image" src="./cap/cap1.jpg" alt="${items.category}"></a>
+                    <h4 class="product-name">Korean Cap</h4>
+                    <h4 class="product-brand">Uniqlo</h4>
+                    <h4 class="product-price">300</h4>
+                </li>
+            </ul> -->
             <!-- End Single Product -->
         </div>
     </main> 
